add tailwindcss, hide navbar, add landing page, reworking nav

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,7 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 * {
   outline: none;
   -ms-overflow-style: none !important; /* IE and Edge */
