--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 * {
+  padding: 0;
+  margin: 0;
+  border: border-box;
   outline: none;
   -ms-overflow-style: none !important; /* IE and Edge */
   scrollbar-width: none !important; /* Firefox */
@@ -10,12 +18,12 @@
 html,
 body,
 #root {
-  font-family: "NHassGrotesk";
+  font-family: 'Inter', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   --ohm-gold: #f8cc82;
   --ohm-card-border-radius: 10px;
-  --light-paper-bg: linear-gradient(65.7deg, #f5f5f5 8.35%, #ffffff 100%);
+  --light-paper-bg: 'blue';
   --dark-paper-bg: linear-gradient(237.43deg, #2b313d -12.81%, #171a20 132.72%);
 }
 
@@ -32,7 +40,7 @@ body {
   flex-direction: column;
   z-index: 1;
   background-size: cover;
-  font-family: "NHassGrotesk";
+  font-family: 'Inter', sans-serif !important;
   transition: all ease 0.33ms;
 }
 
