--- a/src/views/Stake/Stake.scss
+++ b/src/views/Stake/Stake.scss
@@ -1,3 +1,12 @@
+// additional styling
+.staked-input{
+  font-size: 0.3rem !important;
+}
+
+.stake-apy{
+  font-size: 8px !important;
+}
+
 #stake-view,
 #v1-stake-view {
   display: flex;
